lyrics-page/k8s/base/page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: songs-service,lyrics-service,albums-service
  labels:
    app: lyrics-page
    app.openshift.io/runtime: nginx
    app.kubernetes.io/part-of: right-lyrics
  name: lyrics-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-page
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: lyrics-page
    spec:
      volumes:
        - configMap:
            name: lyrics-page
          name: lyrics-page
      containers:
        - image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/lyrics-page:latest
          imagePullPolicy: Always
          name: lyrics-page
          volumeMounts:
            - mountPath: /opt/app-root/src/bpageld/config.js
              name: lyrics-page
              subPath: config.js
          ports:
            - containerPort: 8080
