lyrics-page/k8s/base/page_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: songs-service,lyrics-service
  labels:
    app: lyrics-page
    app.openshift.io/runtime: nginx
    app.kubernetes.io/part-of: right-lyrics
  name: lyrics-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lyrics-page
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: lyrics-page
    spec:
      volumes:
        - configMap:
            name: lyrics-page
          name: lyrics-page
      containers:
        - image: quay.io/right-lyrics/lyrics-page:1.1
          imagePullPolicy: Always
          name: lyrics-page
          volumeMounts:
            - mountPath: /etc/opt/rh/rh-nginx112/nginx/nginx.conf
              name: lyrics-page
              subPath: nginx.conf
          ports:
            - containerPort: 8080
