lyrics-page/k8s/base/page_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: page-ingress  
spec:
  rules:
    - host: right.lyrics
      http:
        paths:
          - path: /
            backend:
              serviceName: lyrics-page
              servicePort: 8080
